[gd_scene load_steps=4 format=3 uid="uid://dq4jj6xw16jmt"]

[ext_resource type="Script" path="res://crop/crop.gd" id="1_unr3p"]
[ext_resource type="Texture2D" uid="uid://baw5q8kxcy88s" path="res://crop/crop_placeholder_2.png" id="2_l0b0x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_djtdv"]
size = Vector2(200, 200)

[node name="Crop" type="Node2D"]
script = ExtResource("1_unr3p")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(99, 100)
shape = SubResource("RectangleShape2D_djtdv")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(98, 95)
texture = ExtResource("2_l0b0x")

[node name="PopupMenu" type="PopupMenu" parent="."]
item_count = 1
item_0/text = "Grow"
item_0/id = 0

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="id_pressed" from="PopupMenu" to="." method="_on_popup_menu_id_pressed"]
